--- a/ShopeeCoinsCalc/wwwroot/index.html
+++ b/ShopeeCoinsCalc/wwwroot/index.html
@@ -5,7 +5,15 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ShopeeCoinsCalc</title>
-    <base href="/ShopeeCoinsCalcPage/" />
+    <script>
+        (function () {
+            var baseHref = "/";
+            if (window.location.hostname !== 'localhost') {
+                baseHref = "/ShopeeCoinsClacPage/";
+            }
+            document.write('<base href="' + baseHref + '">');
+        })();
+    </script>
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
