fixed base path

--- a/ShopeeCoinsCalc/wwwroot/index.html
+++ b/ShopeeCoinsCalc/wwwroot/index.html
@@ -9,7 +9,7 @@
         (function () {
             var baseHref = "/";
             if (window.location.hostname !== 'localhost') {
-                baseHref = "/ShopeeCoinsClacPage/";
+                baseHref = "/ShopeeCoinsCalcPage/";
             }
             document.write('<base href="' + baseHref + '">');
         })();
